postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexplore-db
  namespace: nexplore
spec:
  ports:
    - port: 5432
  selector:
    app: nexplore-db

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexplore-db
  namespace: nexplore
spec:
  serviceName: "nexplore-db"
  replicas: 1
  selector:
    matchLabels:
      app: nexplore-db
  template:
    metadata:
      labels:
        app: nexplore-db
    spec:
      containers:
        - name: nexplore-db
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: init-scripts
          configMap:
            name: init-db-scripts
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
