todo-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-web
  namespace: nexplore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-web
  template:
    metadata:
      labels:
        app: todolist-web
    spec:
      containers:
      - name: todolist-web
        image: ghcr.io/lopoon/nexplore_todolist_web:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: todolist-web-service
  namespace: nexplore
spec:
  selector:
    app: todolist-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
