ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexplore-ingress
  namespace: nexplore
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: todolist-api-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todolist-web-service
            port:
              number: 80
